--- a/getting-started/validation-troubleshooting/common-issues.mdx
+++ b/getting-started/validation-troubleshooting/common-issues.mdx
@@ -1,186 +1,219 @@
 ---
-title: "Troubleshooting Common Setup Issues"
-description: "A practical guide to addressing frequent setup obstacles: build errors, linkage problems, missing dependencies, and platform-specific quirks. Includes tips for interpreting error messages and where to find further help."
+title: "Troubleshooting Common Issues"
+description: "A curated FAQ for setup and first-test errors. Learn to resolve linker problems, C++ standard mismatches, missing dependencies, and other frequent challenges new users face."
 ---
 
-# Troubleshooting Common Setup Issues
+# Troubleshooting Common Issues
 
-This practical guide helps you quickly diagnose and resolve the most frequent setup problems encountered when integrating and building GoogleTest and GoogleMock in your C++ projects. It covers build errors, linkage problems, missing dependencies, and platform-specific quirks, enabling you to interpret error messages effectively and continue your testing journey without delay.
-
----
-
-## 1. Build Errors and Linkage Problems
-
-Build failures are common when starting with GoogleTest, often related to missing headers, unresolved references, or incompatible build options.
-
-### 1.1 Missing Headers or Include Path Issues
-
-**Symptom:** Compilation errors like `fatal error: gtest/gtest.h: No such file or directory`.
-
-**Action Steps:**
-
-- Verify that your include paths properly point to the directory containing GoogleTest headers.
-- If you are using CMake or Bazel, ensure you have correctly added GoogleTest as a dependency and included its headers with the `target_include_directories` or equivalent.
-- For manual builds, make sure you cloned or downloaded the GoogleTest repository and set your compiler's include search path accordingly.
-
-### 1.2 Unresolved Symbols During Linking
-
-**Symptom:** Linker errors such as `undefined reference to 'testing::InitGoogleTest(int*, char**)'`.
-
-**Action Steps:**
-
-- Confirm that the GoogleTest and GoogleMock libraries are properly linked to your test executable.
-- When using CMake, target the `gtest` and `gmock` libraries, or link the combined `gmock_main` if you rely on its default `main()` function.
-- Check for consistent build flags and compiler settings between your code and GoogleTest binaries.
-
-### 1.3 Multiple Definition or Conflict Errors
-
-**Symptom:** Errors indicating multiple definitions, often related to `main()` or static symbols.
-
-**Action Steps:**
-
-- Use `gmock_main` only when you want the default test entry point; if you write your own `main()`, avoid linking `gmock_main`.
-- Be cautious of linking GoogleTest multiple times via static libs or bundled sources.
-- Use proper include guards and namespace scopes if you include GoogleTest source files directly.
-
-<Note>
-If you encounter conflicting symbols on different platforms, it may be due to linkage of incompatible runtime libraries or mixing debug and release builds. Consistency is key.
-</Note>
-
-## 2. Missing Dependencies
-
-GoogleTest has minimal external dependencies, but certain build tools and environment requirements are essential.
-
-### 2.1 Compiler Support and C++ Standards
-
-- Ensure your compiler supports C++11 or later (GoogleTest requires at least C++11).
-- Check compiler version compatibility as documented in the [System Requirements](getting-started/prerequisites-installation/system-requirements).
-
-### 2.2 Build Tools
-
-- For CMake: Confirm that you have a functional CMake installation (3.5 or higher recommended).
-- For Bazel: Ensure your Bazel version meets minimum requirements; refer to [Getting Started: Building with CMake and Bazel](guides/core-workflows/getting-started-cmake-bazel).
-
-### 2.3 Platform-Specific Libraries
-
-- Windows builds require a compatible MSVC version or MinGW.
-- On Linux/macOS, standard system development packages (like build-essential, clang, or gcc) must be installed.
-
-<Tip>
-If you use prebuilt packages or package managers, make sure their GoogleTest versions and dependencies align with your project requirements.
-</Tip>
-
-## 3. Platform-Specific Quirks
-
-Though GoogleTest supports major platforms uniformly, subtle differences can cause issues.
-
-### 3.1 Windows
-
-- Visual Studio projects may require explicit linking of certain runtime libraries.
-- Memory leak detection messages may appear due to GoogleTest's own static instances; see [FAQ](faq.md#how-can-i-suppress-the-memory-leak-messages-on-windows).
-
-### 3.2 macOS
-
-- System integrity protection (SIP) and permissions might affect debugging setups.
-- Use Apple Clang or updated GCC versions compatible with C++11.
-
-### 3.3 Linux
-
-- Ensure you have development headers for pthreads and rt libraries if required.
-- Use consistent compiler versions to avoid ABI incompatibilities.
-
-<Warning>
-Beware of mixing different standard library implementations (libstdc++ vs libc++). It can cause strange build or runtime failures.
-</Warning>
-
-## 4. Interpreting Error Messages
-
-Understanding compilation and linkage errors is crucial.
-
-### 4.1 Typical Header Errors
-
-- `file not found`: Check include paths.
-- Version mismatch errors: Verify you are using compatible GoogleTest versions and build options.
-
-### 4.2 Linker Errors
-
-- `undefined reference`: Missing linkage with GoogleTest libraries.
-- `multiple definition`: Duplicate symbols, typically from linking both source files and libraries.
-
-### 4.3 Runtime Errors
-
-- Test executable crashes: Confirm test fixture setup and dependency correctness.
-
-<Note>
-Run tests with `--gtest_break_on_failure` to debug assertion failures interactively.
-</Note>
-
-## 5. Best Practices to Avoid Setup Issues
-
-- Use the official GoogleTest release corresponding to your project.
-- Follow build instructions precisely, whether via CMake, Bazel, or manual integration.
-- Keep your test and GoogleTest code compiled with the same compiler and flags.
-- Use the `gtest_main` library to simplify linking, unless a custom `main()` is needed.
-
-## 6. Where to Find Further Help
-
-- Browse the [GoogleTest FAQ](docs/faq.md) for answers to common questions.
-- Review the [Installation Methods](getting-started/prerequisites-installation/installation-methods) guide.
-- Visit the [GitHub Issues](https://github.com/google/googletest/issues) page to check for reported problems.
-- Consult community-created documentation linked in the [Community-Created Documentation](docs/community_created_documentation.md).
-
-<Tip>
-Engage with the community and inspect examples in `googletest/samples/` for working setups.
-</Tip>
+Welcome to this curated FAQ dedicated to addressing the most frequent setup and test-related errors encountered when getting started with GoogleTest. Whether you're grappling with linker failures, C++ standard conflicts, or dependency woes, this guide takes you through precise, actionable steps to identify and resolve these challenges.
 
 ---
 
-This guide helps you overcome the common barriers during your initial GoogleTest setup, so you can focus on writing and running reliable tests rapidly.
+## 1. Linker Errors with Static Const Members
 
+### Problem:
+You defined a static const data member inside your class but get linker errors about "undefined references".
+
+### Cause:
+In C++, a `static const` member declared in the class header must also be defined (without initializer) in a single `.cc` file. If not, the linker fails.
+
+### Solution:
+1. Check your class header; if you have
+    ```cpp
+    class Foo {
+      static const int kValue = 100;
+    };
+    ```
+2. Add this in one `.cc` file (without initializer):
+    ```cpp
+    const int Foo::kValue;
+    ```
+
+3. If your static member is declared `constexpr`, the definition in `.cc` is not required.
+
+### Tips & Pitfalls:
+- This is a common cause of linker errors involving `EXPECT_EQ()` or similar macros.
+- Older compilers were lax with this, but modern compilers enforce it.
 
 ---
 
-## Related Documentation
+## 2. C++ Standard Version Mismatch
 
-- [GoogleTest Primer](overview/product-intro-core-concepts/what-is-gtest)
-- [Installation on Different Platforms](getting-started/prerequisites-installation/installation-methods)
-- [Setup and Project Integration](getting-started/configuration-first-run/configuration-setup)
-- [Your First Test: From Source to Success](getting-started/configuration-first-run/your-first-test)
-- [GoogleTest FAQ](docs/faq.md)
+### Problem:
+Compilation or linker errors due to differing C++ standards.
+
+### Cause:
+GoogleTest requires C++17 or higher. Mixing build targets compiled with different C++ standards causes ABI incompatibility.
+
+### Solution:
+- Ensure all targets (including GoogleTest and your test binaries) are explicitly compiled with C++17 or above.
+- Check your `CMakeLists.txt` or build scripts to add flags like `-std=c++17` for all relevant targets.
+
+### Verification:
+- Run `g++ -v` or check your compiler docs to verify support for C++17.
+- Inspect your build output to confirm the flag is passed.
 
 ---
 
-# Quick Validation Checklist
+## 3. Missing Dependencies or Include Paths
 
-After resolving your setup issues, you may want to verify your environment and build by following the [Quick Validation Checklist](getting-started/validation-troubleshooting/validation-steps) documentation.
+### Problem:
+Compilation fails due to missing `gtest/gtest.h` or related headers.
+
+### Cause:
+Your build system is not locating GoogleTest headers.
+
+### Solution:
+- Confirm GoogleTest is installed or built in your environment.
+- Add the path to the GoogleTest headers in your build include directories.
+  - For CMake, use:
+    ```cmake
+    target_include_directories(your_test_target PRIVATE /path/to/googletest/include)
+    ```
+- Link against the GoogleTest library:
+  ```cmake
+  target_link_libraries(your_test_target PRIVATE gtest gtest_main)
+  ```
 
 ---
 
-# Troubleshooting Example
+## 4. Fatal and Non-Fatal Failures in Setup or Constructor
 
-Consider the following linker error message:
+### Problem:
+You see failures or crashes related to assertions inside your test fixture's constructor or `SetUp()` method.
 
-```text
-undefined reference to `testing::InitGoogleTest(int*, char**)'
+### Cause:
+- GoogleTest does not support fatal assertions (`ASSERT_*`, `FAIL()`) in constructors.
+- `ASSERT_*` only works in `void` functions and aborts the current function, which constructors cannot support.
+
+### Solution:
+- Move initialization requiring fatal assertions from the constructor to `SetUp()`. Use `ASSERT_*` or `FAIL()` inside `SetUp()`.
+- For fatal conditions in constructors, you can call `abort()` to stop the test run.
+
+### Additional Tips:
+- Use `EXPECT_*` inside the constructor if possible, which generates nonfatal failures.
+- Avoid fatal assertions in destructors due to undefined behavior when throwing exceptions.
+
+---
+
+## 5. Understanding and Handling Death Test Failures
+
+### Common Issues:
+- Death tests hang or cause segmentation faults.
+- Death tests appear to "lose" state modifications made inside the death test.
+
+### Causes & Remedies:
+- Death tests run inside child processes isolated from the parent. Any memory changes (e.g., mock calls) won't propagate.
+- Avoid running threads in the parent process before death tests.
+- Consider setting the death test style to `threadsafe` to reduce race condition issues:
+  ```cpp
+  GTEST_FLAG_SET(death_test_style, "threadsafe");
+  ```
+- Write death tests as atomic statements inside `EXPECT_DEATH` or `ASSERT_DEATH` macros.
+
+### How Death Tests Work:
+- They fork or clone the test program in a subprocess.
+- Subprocess executes the death test statement and exits.
+- GoogleTest verifies exit code and stderr against your expectations.
+
+### Naming Conventions:
+- Test suites containing death tests should have names ending with `DeathTest` to ensure correct ordering.
+
+---
+
+## 6. Using Parameterized Test Generators
+
+### Problem:
+Tests fail due to incorrect or unexpected parameters.
+
+### Guidance:
+- Use the provided parameter generators correctly:
+  - `Range(begin, end [, step])` for sequences
+  - `Values(...)` for explicit values
+  - `ValuesIn(container)` for STL containers or arrays
+  - `Bool()` for boolean parameters
+  - `Combine(...)` for Cartesian product of multiple parameter sets
+
+- Instantiate value-parameterized tests properly using `INSTANTIATE_TEST_SUITE_P` before running `RUN_ALL_TESTS()`.
+
+- When using `ConvertGenerator<T>()` for explicit type conversions, ensure conversions and lambdas don't cause dangling references.
+
+### Example:
+```cpp
+INSTANTIATE_TEST_SUITE_P(MyTests, FooTest, testing::Range(1, 5));
 ```
 
-This indicates the linker cannot find GoogleTest's core library symbols. You should:
+---
 
-1. Confirm that the GoogleTest libraries (`libgtest.a`, `libgmock.a` or their equivalents) are built.
-2. Add them to your link command or CMake target_link_libraries appropriately.
-3. Make sure you aren't mixing static and shared libraries unexpectedly.
+## 7. Test Fixtures and Consistent Test Suite Naming
+
+### Problem:
+Runtime error stating "All tests in the same test suite must use the same fixture class".
+
+### Cause:
+Different fixtures or mixes of `TEST` and `TEST_F` are used within the same test suite name.
+
+### Solution:
+- Ensure all tests in the same suite use the same fixture class.
+- Avoid mixing `TEST()` and `TEST_F()` macros in the same suite.
+- Unique fixture class for each logically grouped test suite.
+
+### Example:
+```cpp
+class FooTest : public testing::Test {};
+TEST_F(FooTest, Test1) { ... }
+TEST_F(FooTest, Test2) { ... }
+```
+
+---
+
+## 8. Common Build and Runtime Flags
+
+### Initialization:
+Always initialize GoogleTest before running tests:
+```cpp
+int main(int argc, char** argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+- Avoid ignoring the return value of `RUN_ALL_TESTS()`. Failing to do so may cause false-positive test passes.
+
+### Useful Flags:
+- `--gtest_filter=*` runs all tests.
+- `--gtest_list_tests` lists test names without running them.
+- `--gtest_color=yes|no|auto` controls colored output.
+- `--gtest_repeat=N` repeats tests N times.
+
+---
+
+## 9. Common Troubleshooting Tips
+
+- **Linker errors:** Confirm static const members defined properly.
+- **Include errors:** Verify include paths and linked libraries.
+- **Compilation errors:** Ensure C++17 standard is used.
+- **Test discovery issues:** Check test macros use valid identifiers without underscores.
+- **Death tests problems:** Avoid threads in parent process; use `threadsafe` death test style.
+
+---
+
+## 10. Getting Help
+
+If issues persist, consider these resources:
+- GoogleTest [GitHub Repository](https://github.com/google/googletest)
+- GoogleTest [FAQ](https://github.com/google/googletest/blob/main/docs/faq.md)
+- GoogleTest [Assertions Reference](reference/assertions.md)
+- Join community forums and issue trackers.
 
 
 ---
 
-# Final Tips
+For more detailed explanations and advanced patterns, please refer to the following related documentation:
 
-- Use `--gtest_list_tests` to see what tests are registered, confirming proper integration.
-- Run with `--gtest_filter=...` to isolate specific tests.
-- Use `--gtest_break_on_failure` to debug failing tests interactively.
-
-
+- [Writing and Running Your First Test](../first-test-setup/writing-running-first-test.md)
+- [Advanced GoogleTest Topics](../advanced.md)
+- [GoogleTest Primer](../primer.md)
+- [Parameterized and Typed Tests Guide](../advanced.md#value-parameterized-tests)
 
 ---
-
-*This page is maintained as part of the GoogleTest Getting Started documentation and fits within the validation and troubleshooting section to guide new users through setup hurdles.*
